fix purpose spacing

--- a/src/scss/_purpose.scss
+++ b/src/scss/_purpose.scss
@@ -27,9 +27,7 @@
 
     article {
       @include grid-column($columns:12);
-      position: relative;
-      top: 50%;
-      transform: translateY(-50%);
+
     }
 
     @media #{$medium-up} {
